Name:           ptmpl
Version:        1.0.0
Cabal-Version:  >= 1.2
Author:         Evgeny Tarasov
Build-type:     Simple
License:        BSD3
Copyright:      (c) 2009 Evgeny Tarasov
Maintainer:     etarasov.ekb@gmail.com
Stability:      Stable
Synopsis:       Source generator with embedding text(html) templates
Description:    The simplest string template generator
Tested-with:    GHC==6.10.3

Executable ptmpl
    Build-Depends:  base >= 3 && < 5,
                    haskell98,
                    parsec >= 2.1
    Main-Is:        Main.hs
    Hs-Source-Dirs: src
    Ghc-options:    -Wall -O2 -fno-warn-unused-do-bind
